# sql-test-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
sql_test_kit/: __init__.py  bigquery.py  column.py  data_literals.py  interpolation_data.py  query_interpolation.py  schema.py  table.py
tests/: test_bigquery.py  test_data_literals.py  test_query_imputation.py
