[tool.poetry]
name = "sql-test-kit"
version = "0.2.3"
description = "Framework for testing SQL queries"
authors = ["victorlandeau <vlandeau@gmail.com>"]
readme = "README.md"
packages = [{include = "sql_test_kit"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
google-cloud-bigquery = {version = "^3.10.0", extras = ["bigquery"]}
db-dtypes = {version = "^1.1.1", extras = ["bigquery"]}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
assertpy = "^1.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
