[tool.poetry]
name = "sql-test-kit"
version = "0.3.0"
description = "Framework for testing SQL queries"
authors = ["victorlandeau <vlandeau@gmail.com>"]
readme = "README.md"
packages = [
    { include = "sql_test_kit" },
]

[tool.poetry.dependencies]
python = ">=3.8 <3.12"
pandas = ">=1.0.0"
google-cloud-bigquery = { version = ">=3.0.0", optional = true, extras = ["bigquery"] }
db-dtypes = { version = ">=1.0.0", optional = true, extras = ["bigquery"] }

[tool.poetry.extras]
bigquery = ["bigquery"]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
assertpy = "^1.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
